<resources>
    <string name="app_name">LoanManager</string>
    <string name="about_you">Dashboard</string>
    <string name="your_monthly_salary">Your Monthly Income: </string>
    <string name="payment_due_this_month">Payment Due This Month: </string>
    <string name="your_cards">View Card Details</string>
    <string name="quick_search">Quick Search: </string>
    <string name="nickname">Nickname: </string>
    <string name="card_number">Card Number:</string>
    <string name="loan_in_this_card">Total Loan in this card:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add_a_credit_card_profile">Add a Credit Card Profile</string>
    <string name="view_credit_card_details">View Credit Card Details</string>
    <string name="manage_credit_cards">Manage Credit Cards</string>
    <string name="installment">Installment</string>
    <string name="add_an_installment">Add an Installment</string>
    <string name="view_installments">View Installments</string>
    <string name="manage_installments">Manage Installments</string>
    <string name="add_a_card">Add a Card</string>
    <string name="card_nickname">Card Nickname</string>
    <string name="card_holder">Name of Card Holder</string>
    <string name="issuing_bank">Issuing Bank</string>
    <string name="variant_e_g_priority_sharia">Variant (e.g. Priority, Sharia)</string>
    <string name="grade_e_g_silver_gold_platinum">Grade (e.g. Silver, Gold, Platinum)</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="name">Name:</string>
    <string name="card_number_no_colon">Card Number</string>
    <string name="cards">Cards</string>
    <string name="name_of_cardholder">Name of Cardholder:</string>
    <string name="credit_limit_with_colon">Credit Limit:</string>
    <string name="issuing_bank_with_colon">Issuing Bank:</string>
    <string name="variant_with_colon">Variant:</string>
    <string name="grade_with_colon">Grade:</string>
    <string name="change_card_details">Change Card Details</string>
    <string name="delete_this_card">Delete This Card</string>
    <string name="installment_name">Installment Name</string>
    <string name="charge_to">Charge to</string>
    <string name="tenor_month">Tenor (Month)</string>
    <string name="total_loan_amount">Total Loan Amount</string>
    <string name="interest">% Interest Per Month</string>
    <string name="charged_to">Charged To</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="already_paid_amount">Already Paid Amount</string>
    <string name="loan_status">Loan Status</string>
    <string name="change_installment_details">Change Installment Details</string>
    <string name="your_name">Your Name:</string>
    <string name="change_your_basic_data">Change Your Basic Data</string>
    <string name="delete_this_installment">Delete This Installment</string>
</resources>
