<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.acailuv.loanmanager.add_installment.AddInstallmentFragmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                style="@style/h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/add_an_installment" />

            <EditText
                android:id="@+id/installment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/installment_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/h3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:text="@string/charge_to" />

                <Spinner
                    android:id="@+id/card_select_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f0"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                    style="@style/h3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_cards" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/p"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin"
                        android:text="@string/card_number"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/card_details_number"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/p"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin"
                        android:text="@string/name_of_cardholder"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/cardholder_name"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/p"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin"
                        android:text="@string/credit_limit_with_colon"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/credit_limit"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/p"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin"
                        android:text="@string/issuing_bank_with_colon"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/issuing_bank"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/p"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin"
                        android:text="@string/variant_with_colon"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/variant"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/p"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin"
                        android:text="@string/grade_with_colon"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/grade"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

                <TextView
                    style="@style/h3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/installment" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/p"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin"
                        android:text="@string/loan_in_this_card"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/card_details_loan"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/tenor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenor_month" />

            <EditText
                android:id="@+id/total_loan_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_loan_amount"
                android:inputType="number" />

            <EditText
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/interest"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_an_installment"
                android:onClick="@{() -> viewModel.onAddButtonClicked(installmentName, tenor, totalLoanAmount, interest)}" />

        </LinearLayout>

    </ScrollView>

</layout>