<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.github.acailuv.loanmanager.ChangeUserDataFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:context=".ChangeUserDataFragment">

        <TextView
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/change_your_basic_data" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name" />

        <EditText
            android:id="@+id/monthly_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/your_monthly_salary"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apply"
            android:onClick="@{() -> viewModel.onApplyClicked(userName, monthlyIncome)}"/>

    </LinearLayout>
</layout>