<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">


        <TextView
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_you" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/p"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/your_monthly_salary" />

                <TextView
                    android:id="@+id/about_you_salary"
                    style="@style/p"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Rp. xxxx-" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/p"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/payment_due_this_month" />

                <TextView
                    android:id="@+id/about_you_payment_due"
                    style="@style/p"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Rp. xxxx-" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_cards" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/p"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin"
                android:text="@string/quick_search"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/card_select_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Spinner listener -> when changed -->

        </LinearLayout>

        <TextView
            android:id="@+id/card_details_header"
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[placeholder card nickname]" />

        <LinearLayout
            android:id="@+id/card_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/p"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/nickname"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/card_details_nickname"
                    style="@style/p"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="[placeholder card nickname]" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/p"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/card_number"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/card_details_number"
                    style="@style/p"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="6547 xxxx xxxx xxxx" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/p"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/loan_in_this_card"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/card_details_loan"
                    style="@style/p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rp. xxx-" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>