<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_you"
            style="@style/h1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/your_monthly_salary"
                    style="@style/p" />
                <TextView
                    android:id="@+id/about_you_salary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Rp. xxxx-"
                    style="@style/p"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/payment_due_this_month"
                    style="@style/p" />
                <TextView
                    android:id="@+id/about_you_payment_due"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Rp. xxxx-"
                    style="@style/p"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_cards"
            style="@style/h1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/card_nickname"
                android:layout_marginEnd="@dimen/margin"
                style="@style/p"/>
            <Spinner
                android:id="@+id/card_select_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Spinner listener -> when changed -->

        </LinearLayout>

        <TextView
            android:id="@+id/card_details_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[placeholder card nickname]"
            style="@style/h2" />

        <LinearLayout
            android:id="@+id/card_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:text="@string/nickname"
                    android:layout_marginEnd="@dimen/margin"
                    style="@style/p"/>
                <TextView
                    android:id="@+id/card_details_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="[placeholder card nickname]"
                    style="@style/p" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:text="@string/card_number"
                    android:layout_marginEnd="@dimen/margin"
                    style="@style/p"/>
                <TextView
                    android:id="@+id/card_details_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="6547 xxxx xxxx xxxx"
                    style="@style/p" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:text="@string/loan_in_this_card"
                    android:layout_marginEnd="@dimen/margin"
                    style="@style/p"/>
                <TextView
                    android:id="@+id/card_details_loan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rp. xxx-"
                    style="@style/p" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>